# ResuMatrix

./: README.md  docker-compose.yml  requirements.txt  setup.md  setup.sh
.dvc/: config
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: jobs.py  resumes.py  training.py
backend/app/core/: config.py
backend/app/services/: database.py  google_genai.py  models.py  pinecone.py  prompts.py  ranking.py  resume_processing.py  storage.py  utils.py
data_pipeline/: Dockerfile  README.md  data.dvc  docker-compose.yaml  requirements.txt
data_pipeline/dags/: deployment_pipeline.py  embeddings_pipeline.py  random_test.py  resumatrix_pipeline.py  train_data_pipeline.py
data_pipeline/scripts/: create_supabase_table.py  fetch_huggingface_data.py  fetch_training_data.py  inference.py  load_to_supabase.py  mod_pub_sub.py
data_pipeline/tests/: run_tests.py  test_fetch_training_data.py  tests.py
frontend/: Dockerfile  README.md  jd_to_text.py  pyproject.toml  streamlit_app.py  supabase_auth.py  text_extraction.py
frontend/app/core/: config.py
frontend/utils/: create_download_link.py
mlruns/0/: meta.yaml
models/: xgboost_model.json
retraining_pipeline/: Jenkinsfile  ModelDockerfile  README.md  download_from_gcs.py  push_to_artifactory.py  requirements.txt  run_retraining.py
retraining_pipeline/docker/: DOCKER_PERMISSIONS.md  Dockerfile  README.md  init-container.sh  setup_docker_permissions.sh  start-services.sh
src/: bt_ranker.py  run_knn.py  run_random_forest.py  run_ranking.py  run_similarity_with_xgboost.py  simple_ranker.py  xgboost_scorer.py
src/agents/: structured_output.py
(+28 files in other folders)
