[project]
name = "resumatrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "fastapi>=0.115.12",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "google-cloud-storage>=3.1.0",
    "google-genai>=1.11.0",
    "pinecone[grpc]>=6.0.2",
    "pydantic-settings>=2.8.1",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
    "xgboost>=1.7.6",
    "scikit-learn>=1.3.0",
]
